Diseño y agregar error en date y no se pudo agregar calendario

--- a/PROYECTOFINAL/app/src/main/res/layout/activity_main.xml
+++ b/PROYECTOFINAL/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,39 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.a41638707.proyectofinal.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Listar eventos"
+            android:id="@+id/btnListar"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Agregar evento"
+            android:id="@+id/btnAgregar"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Modificar evento"
+            android:id="@+id/btnModificar"
+            android:layout_gravity="center_horizontal" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quitar evento"
+            android:id="@+id/btnBorrar"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </RelativeLayout>
