Activity de listar, se manda y recibe el bundle, se usa adapter y se agrega al listview
Todavía no lo pude probar, lo hice suponiendo que se conecta bien y re
cabe el json. Hice las propiedades privadas y agregue métodos para
modificar los atributos u obtenerlos. Al botón de listar le puse
onclicklistener xoxo

--- a/PROYECTOFINAL/app/src/main/res/layout/activity_agregar.xml
+++ b/PROYECTOFINAL/app/src/main/res/layout/activity_agregar.xml
@@ -57,10 +57,15 @@
             android:layout_height="0dp" />
 
         <TimePicker
+
             android:id="@+id/time_picker"
             android:layout_weight="4"
             android:layout_width="match_parent"
-            android:layout_height="0dp" />
+            android:layout_height="0dp"
+            android:visibility="invisible"/>
+        <!--
+  Lo oculté porque no se si lo usamos o no y porque ocupa todo lo que queda
+  -->
 
     </LinearLayout>
 </RelativeLayout>
