--- a/PROYECTOFINAL/app/src/main/res/layout/activity_agregar.xml
+++ b/PROYECTOFINAL/app/src/main/res/layout/activity_agregar.xml
@@ -30,7 +30,7 @@
         <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/spnTipos" />
+            android:id="@+id/spnTipo" />
 
         <TextView
             android:layout_width="wrap_content"
